Updated the shell execution to adopt Mac but not fully tested yet. Added -f option to specify a long intent specification to GEN. Added a new test suite to read APK, to generate an intent specification, and to generate ADB commands but not fully working yet.